@@ -72,7 +72,7 @@ public class CollectionChart {
 			property.isNumber() &&
 			StringUtils.containsAnyIgnoreCase(property.getName(), "year", "anyo", "anio", "number", "numero", "code", "codigo", "id"));
 		if (result.size() == 2) return result;
-		result = new LinkedHashSet<String>(result); // To avoid repeated properties // tmr 
+		result = new LinkedHashSet<String>(result); // To avoid repeated properties  
 		Collection<String> descriptions = createDefaultProperties(1, property -> 
 		StringUtils.containsAnyIgnoreCase(property.getName(), XavaPreferences.getInstance().getDefaultDescriptionPropertiesValueForDescriptionsList())); 
 		result.addAll(descriptions); 
