@@ -3014,12 +3014,10 @@ a[data-action="Collection.previous"] {
 	padding: 20px;
 	margin-top: -25px;
 	margin-left: -5px;
-	/* tmr ini */
 	min-width: 200px;
 	display: flex;
 	justify-content: center;
 	align-items: baseline;	
-	/* tmr fin */
 }
 
 .ox-large-display-suffix {
@@ -3033,8 +3031,6 @@ a[data-action="Collection.previous"] {
 .ox-large-display i { 
 	color: var(--large-display-icon-color); 
 	vertical-align: top;
-	/* tmr ini */
 	font-size: xxx-large;
 	margin-right: 10px;
-	/* tmr fin */
 }
