@@ -263,4 +263,4 @@
 		<view name="WithSections"/>
 		<controller name="CarrierWithSections"/>		<controller name="TypicalExtendedPrint"/>		<controller name="Carrier"/>		<controller name="ModuleAndModelName"/>
 	</module>		<module name="WarehouseSpecialNew" >		<model name="Warehouse"/>		<view name="WithOnChangeZone"/>		<controller name="WarehouseSpecialNew"/>		<controller name="NoCustomizeList"/>	</module>		<module name="WarehouseSpecialNew2">	<!-- test overwrite actions when a controllers extends another that extends another and both have the same action -->		<model name="Warehouse"/>		<controller name="WarehouseSpecialNew2"/>	</module>		<module name="OfficeOnlyWarehouse">		<model name="Office"/>		<view name="OnlyWarehouse"/>		<controller name="Typical"/>			</module>		<module name="OfficeWithDescriptionsLists">		<model name="Office"/>		<view name="WithDescriptionsLists"/>		<controller name="Typical"/>			</module>			<module name="OfficeWithDescriptionsListsWithReferenceInCondition">		<model name="Office"/>		<view name="WithDescriptionsListsWithReferenceInCondition"/>		<controller name="Typical"/>			</module>			<module name="ShipmentSeparatedTime">		<model name="Shipment"/>		<view name="SeparatedTime"/>		<controller name="Typical"/>			</module>		<module name="ShipmentWithOnChange">		<model name="Shipment"/>		<view name="WithOnChange"/>		<controller name="Typical"/>			</module>		<module name="IssueList">		<model name="IssueList"/>		<controller name="IssueList"/>		<mode-controller name="Void"/>	</module>		<module name="IssueChangeDB">		<model name="Issue"/>		<controller name="IssueChangeDB"/>	</module>			<module name="SelectSchema">		<model name="SelectSchema"/>		<controller name="SelectSchema"/>		<mode-controller name="Void"/>	</module>	<module name="SellerSearchListCondition">		<model name="Seller"/>		<view name="SearchListCondition" />		<controller name="Typical"/>	</module>				
-	<module name="SellerSearchListConditionOff">		<model name="Seller"/>		<view name="SearchListConditionOff" />		<controller name="Typical"/>	</module>				<module name="SellerSearchListConditionBlank">		<model name="Seller"/>		<view name="SearchListConditionBlank" />		<controller name="Typical"/>	</module>			<module name="IssueWeb">		<model name="Issue"/>		<view name="IssueWeb" />		<controller name="Typical"/>		<controller name="UrlParameters"/>	</module>		<module name="TreeViewDefaultPath">		<model name="TreeContainer" />		<view name="Simple" />		<controller name = "Typical" />	</module>			<module name="TreeViewNoDefaultPath">		<model name="TreeContainer" />		<view name="NoDefaultPath" />		<controller name = "Typical" />	</module>		<module name="TreeViewAlternateReader">		<model name="TreeContainer" />		<view name="Alternate" />		<controller name = "Typical" />	</module>			<module name="TreeViewDefaultPathPropertyBased">		<model name="TreeContainerPropertyBased" />		<view name="Simple" />		<controller name = "Typical" />	</module>				<module name="GoDescription">		<model name="Login"/>		<controller name = "GoDescription" />	</module>		<module name="GoDescriptionChainingOnInit">		<model name="Login"/>		<controller name = "GoDescriptionChainingOnInit" />	</module>		<module name="Login">		<model name="Login"/>		<controller name="Login"/>	</module>		<module name="FilterBySubfamilyAndYear">		<model name="FilterBySubfamilyAndYear"/>		<controller name="FilterBySubfamilyAndYear"/>	</module>		<module name="DriverWithTabName">		<model name="Driver"/>		<tab name="OrderByName"/>		<controller name="Typical"/>	</module>		<module name="Teacher">		<model name="Teacher"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="School">		<model name="School"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="ReallocationDetailsReadOnly">		<model name="Reallocation"/>		<view name="DetailsReadOnly"/>		<controller name="Typical"/> 	</module>		<module name="ReallocationDetailsEditOnly">		<model name="Reallocation"/>		<view name="DetailsEditOnly"/>		<controller name="Typical"/> 	</module>		<module name="ReallocationDetailsNoProduct">		<model name="Reallocation"/>		<view name="DetailsNoProduct"/>		<controller name="Typical"/> 	</module>		<module name="ProductsEvaluationDetailsReadOnly">		<model name="ProductsEvaluation"/>		<view name="DetailsReadOnly"/>		<controller name="Typical"/> 	</module>		<module name="ProductsEvaluation2ExtendedDetails">		<model name="ProductsEvaluation2"/>		<view name="ExtendedDetails"/>		<controller name="Typical"/> 	</module>			<module name="DrinksFoodsByCountry">       <model name="DrinksFoodsByCountry"/>       <controller name="ResetViewOnInit"/>    </module>    	    <module name="QuoteWithRemoveElementCollection">    	<model name="Quote" />    	<view name="QuoteWithRemoveElementCollection" />    	<controller name="Typical" />    </module>        <module name="QuoteWithSum">    	<model name="Quote" />    	<view name="WithSum" />    	<controller name="Typical" />    </module>        <module name="QuoteNoTotals">    	<model name="Quote" />    	<view name="NoTotals" />    	<controller name="Typical" />    </module>        <module name="NetMachineWithNew">    	<model name="NetMachine" />    	<controller name="NetMachineWithNew" />    </module>        <module name="NetMachineWithoutNew">    	<model name="NetMachine" />    	<controller name="NetMachineWithoutNew" />    </module>        <module name="WorkCostOrderedInvoices">    	<model name="WorkCost" />    	<view name="OrderedInvoices" /> <!-- With explicit view to test a case -->    	<controller name="Typical" />    </module>        <module name="WorkCostUnorderedInvoices">    	<model name="WorkCost" />    	<view name="UnorderedInvoices" />    	<controller name="Typical" />    </module>        <module name="WorkCostOnlyDescription">    	<model name="WorkCost" />    	<view name="OnlyDescription" />    	<controller name="Typical" />    </module>    	<!-- Bug when having keys in group -->    <module name="CustomerWithGroups" folder="invoicing.variations">		<model name="Customer"/>		<view name="WithGroups"/>		<controller name="CustomerWithGroups"/>	</module>		<module name="ShowTextFile" >		<model name="ShowTextFile"/>	</module>		<module name="EventWithFilter" >		<env-var name="XAVATEST_DEFAULT_NAME" value="Chung"/>			<model name="Event"/>		<tab name="DefaultName" />		<controller name="Typical"/>	</module>		<module name="Grade" >						<model name="Grade"/>						<controller name="Grade"/>			</module>		<module name="SimulationMargin" >					    <model name="SimulationMargin"/>	    <controller name="Typical"/>			</module>		<module name="SimulationVerification">		<model name="SimulationVerification"/>		<controller name="TypicalNotResetOnSave"/>	</module>		<module name="CorporationEmployeesChart">		<model name="Corporation"/>		<view name="EmployeesChart"/>		<controller name="Typical"/>	</module>			<module name="CorporationEmployeesRefinedChart">		<model name="Corporation"/>		<view name="EmployeesRefinedChart"/>		<controller name="Typical"/>	</module>		<!-- tmr ini -->	<module name="StaffDashboard">		<model name="StaffDashboard"/>		<controller name="InitModelWithNewInstance"/>	</module>			<!-- tmr fin -->	</application>
+	<module name="SellerSearchListConditionOff">		<model name="Seller"/>		<view name="SearchListConditionOff" />		<controller name="Typical"/>	</module>				<module name="SellerSearchListConditionBlank">		<model name="Seller"/>		<view name="SearchListConditionBlank" />		<controller name="Typical"/>	</module>			<module name="IssueWeb">		<model name="Issue"/>		<view name="IssueWeb" />		<controller name="Typical"/>		<controller name="UrlParameters"/>	</module>		<module name="TreeViewDefaultPath">		<model name="TreeContainer" />		<view name="Simple" />		<controller name = "Typical" />	</module>			<module name="TreeViewNoDefaultPath">		<model name="TreeContainer" />		<view name="NoDefaultPath" />		<controller name = "Typical" />	</module>		<module name="TreeViewAlternateReader">		<model name="TreeContainer" />		<view name="Alternate" />		<controller name = "Typical" />	</module>			<module name="TreeViewDefaultPathPropertyBased">		<model name="TreeContainerPropertyBased" />		<view name="Simple" />		<controller name = "Typical" />	</module>				<module name="GoDescription">		<model name="Login"/>		<controller name = "GoDescription" />	</module>		<module name="GoDescriptionChainingOnInit">		<model name="Login"/>		<controller name = "GoDescriptionChainingOnInit" />	</module>		<module name="Login">		<model name="Login"/>		<controller name="Login"/>	</module>		<module name="FilterBySubfamilyAndYear">		<model name="FilterBySubfamilyAndYear"/>		<controller name="FilterBySubfamilyAndYear"/>	</module>		<module name="DriverWithTabName">		<model name="Driver"/>		<tab name="OrderByName"/>		<controller name="Typical"/>	</module>		<module name="Teacher">		<model name="Teacher"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="School">		<model name="School"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="ReallocationDetailsReadOnly">		<model name="Reallocation"/>		<view name="DetailsReadOnly"/>		<controller name="Typical"/> 	</module>		<module name="ReallocationDetailsEditOnly">		<model name="Reallocation"/>		<view name="DetailsEditOnly"/>		<controller name="Typical"/> 	</module>		<module name="ReallocationDetailsNoProduct">		<model name="Reallocation"/>		<view name="DetailsNoProduct"/>		<controller name="Typical"/> 	</module>		<module name="ProductsEvaluationDetailsReadOnly">		<model name="ProductsEvaluation"/>		<view name="DetailsReadOnly"/>		<controller name="Typical"/> 	</module>		<module name="ProductsEvaluation2ExtendedDetails">		<model name="ProductsEvaluation2"/>		<view name="ExtendedDetails"/>		<controller name="Typical"/> 	</module>			<module name="DrinksFoodsByCountry">       <model name="DrinksFoodsByCountry"/>       <controller name="ResetViewOnInit"/>    </module>    	    <module name="QuoteWithRemoveElementCollection">    	<model name="Quote" />    	<view name="QuoteWithRemoveElementCollection" />    	<controller name="Typical" />    </module>        <module name="QuoteWithSum">    	<model name="Quote" />    	<view name="WithSum" />    	<controller name="Typical" />    </module>        <module name="QuoteNoTotals">    	<model name="Quote" />    	<view name="NoTotals" />    	<controller name="Typical" />    </module>        <module name="NetMachineWithNew">    	<model name="NetMachine" />    	<controller name="NetMachineWithNew" />    </module>        <module name="NetMachineWithoutNew">    	<model name="NetMachine" />    	<controller name="NetMachineWithoutNew" />    </module>        <module name="WorkCostOrderedInvoices">    	<model name="WorkCost" />    	<view name="OrderedInvoices" /> <!-- With explicit view to test a case -->    	<controller name="Typical" />    </module>        <module name="WorkCostUnorderedInvoices">    	<model name="WorkCost" />    	<view name="UnorderedInvoices" />    	<controller name="Typical" />    </module>        <module name="WorkCostOnlyDescription">    	<model name="WorkCost" />    	<view name="OnlyDescription" />    	<controller name="Typical" />    </module>    	<!-- Bug when having keys in group -->    <module name="CustomerWithGroups" folder="invoicing.variations">		<model name="Customer"/>		<view name="WithGroups"/>		<controller name="CustomerWithGroups"/>	</module>		<module name="ShowTextFile" >		<model name="ShowTextFile"/>	</module>		<module name="EventWithFilter" >		<env-var name="XAVATEST_DEFAULT_NAME" value="Chung"/>			<model name="Event"/>		<tab name="DefaultName" />		<controller name="Typical"/>	</module>		<module name="Grade" >						<model name="Grade"/>						<controller name="Grade"/>			</module>		<module name="SimulationMargin" >					    <model name="SimulationMargin"/>	    <controller name="Typical"/>			</module>		<module name="SimulationVerification">		<model name="SimulationVerification"/>		<controller name="TypicalNotResetOnSave"/>	</module>		<module name="CorporationEmployeesChart">		<model name="Corporation"/>		<view name="EmployeesChart"/>		<controller name="Typical"/>	</module>			<module name="CorporationEmployeesRefinedChart">		<model name="Corporation"/>		<view name="EmployeesRefinedChart"/>		<controller name="Typical"/>	</module>		<module name="StaffDashboard">		<model name="StaffDashboard"/>		<controller name="InitModelWithNewInstance"/>	</module>	</application>
