@@ -2,11 +2,9 @@
 	margin-bottom: 6px;	
 }
 
-/* tmr ini */
 #ox_openxavatest_StaffDashboard__core .ox-view {
 	max-width: 1055px;
 	margin-top: 40px;
 	margin-left: auto;
 	margin-right: auto;
 }
-/* tmr fin*/
